@@ -2179,3 +2179,5 @@
 	 missing prototypes and use functions instead of macros for CRC_ADD and
 	 CRC_PRESET (Stuart).
 20071022 disk/wd_fdc.c: fix typo (Stuart).
+20071022 disk/{beta.c,plusd.c,wd_fdc.c,wd_fdc.h}: rename cmdint to intrq
+	 (Stuart).
